<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="@dimen/app_top_margin"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Press buttons to launch Splash Screen"/>

    <Button
        android:id="@+id/lc_tb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="launchSplashScreen"
        android:text="Logo Center, Title bottom"/>

    <Button
        android:id="@+id/lt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="launchSplashScreen"
        android:text="Logo Top"/>

    <Button
        android:id="@+id/lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="launchSplashScreen"
        android:text="Logo Bottom"/>
</LinearLayout>