<resources>
    <string name="app_name">Catalog App</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_buttons">NavigationButtonsActivity</string>
    <string name="change_theme">Change theme</string>
    <string name="previous_theme">Previous theme</string>
    <string name="uikit_splash_title">Mobile App</string>
...
    <string name="spinneronbuttontext">Philips account</string>
    <string name="finishloading">Finish loading</string>

    <string-array name="hamburger_drawer_items">
        <item>Title Long</item>
        <item>Quisque</item>
        <item>Eget Odio</item>
        <item>Ac Lectus</item>
        <item>Faucibus</item>
        <item>Eget In</item>
        <item>Pellentesque</item>
        <item>Title long</item>
        <item>Vestibulum</item>
        <item>Tortor</item>
    </string-array>

    <array name="hamburger_drawer_icons">
        <item>@drawable/uikit_cart</item>
...
